--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,18 @@
     <string name="menu_events">Events</string>
     <string name="menu_forum">Forum</string>
     <string name="menu_artists">Artists</string>
+
+    <!-- user strings -->
+    <string name="action_profile">Profile</string>
+    <string name="action_logout">Logout</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
+    <string name="_12_345_678">12 345 678</string>
 </resources>
